objects/Standard_Weight_Config__c.object
<CustomObject>
    <fields>
        <fullName>Default_Weighting__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Default Weighting</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Standard Weights/Configs</relationshipLabel>
        <relationshipName>Standard_Weights_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Name__c</fullName>
        <label>Standard Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard</label>
        <referenceTo>Standard__c</referenceTo>
        <relationshipLabel>Standard Weights/Configs</relationshipLabel>
        <relationshipName>Standard_Weights_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Standard Weight/Config</label>
    <nameField>
        <displayFormat>SSW{0}</displayFormat>
        <label>Standard Weight/Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Weights/Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>